# khala

./: .ccls  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
include/khala/base/: buffer.hh  builtin_events.hh  cpp_feature.hh  emitter.hh  event_loop.hh  event_queue.hh  macro_helper.hh  reflection.hh  serialization.hh  string_ref.hh  string_utility.hh  utility.hh
include/khala/network/: types.hh  udp_socket.hh
include/khala/serializer/: binary.hh  json.hh
src/base/: event_loop.cc
src/khala/base/: event_loop.cc
src/khala/network/: types.cc  udp_socket.cc
src/khala/serializer/: json.cc
src/serializer/: binary.cc  json.cc
test/base/: buffer_test.cc  emitter_test.cc  event_queue_test.cc  reflection_test.cc  utility_test.cc
test/network/: udp_socket_test.cc
test/serializer/: binary_serializer_test.cc  json_serializer_test.cc
